--- a/secapp/requirements.txt
+++ b/secapp/requirements.txt
@@ -1,9 +1,65 @@
-Django==5.0.8
+aioquic==1.2.0
+asgiref==3.8.1
+attrs==24.2.0
+blinker==1.8.2
+Brotli==1.1.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cryptography==43.0.1
+Django==5.1.1
+Flask==3.0.3
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+idna==3.8
+itsdangerous==2.2.0
+Jinja2==3.1.4
 joblib==1.4.2
+kaitaistruct==0.10
+ldap3==2.9.1
+MarkupSafe==2.1.5
 mitmproxy==10.4.2
+mitmproxy-windows==0.6.3
+mitmproxy_rs==0.6.3
+msgpack==1.0.8
+numpy==2.1.1
 pandas==2.2.2
+passlib==1.7.4
+protobuf==5.27.3
 psutil==6.0.0
-Requests==2.32.3
-scikit_learn==1.5.1
-watchdog==4.0.1
-win32security==2.1.0
+publicsuffix2==2.20191221
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydivert==2.1.0
+pylsqpack==0.3.18
+pyOpenSSL==24.2.1
+pyparsing==3.1.2
+pyperclip==1.9.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+scikit-learn==1.5.1
+scipy==1.14.1
+service-identity==24.1.0
+six==1.16.0
+sortedcontainers==2.4.0
+sqlparse==0.5.1
+threadpoolctl==3.5.0
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+urwid==2.6.15
+watchdog==5.0.2
+wcwidth==0.2.13
+Werkzeug==3.0.4
+Win32Security==2.1.0
+wsproto==1.2.0
+zstandard==0.23.0
